--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,7 +11,53 @@
   <link rel='stylesheet' href='/Content/app.css' />
 </head>
 <body>
-  <p>Welcome to TEST <%= title %> Page</p>
+  <!-- MAIN NAVIGATION -->
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">COMP229</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+          
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-house"></i> Home</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/about"><i class="fa-solid fa-circle-info"></i> About</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/projects"><i class="fa-solid fa-paperclip"></i> Projects</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/services"><i class="fa-solid fa-handshake"></i> Services</a>
+          </li>
+          
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/contact"><i class="fa-solid fa-envelope"></i> Contact Us</a>
+          </li>
+          
+        </form>
+      </div>
+    </div>
+  </nav>
+  
+  <!-- MAIN CONTENT SECTION -->
+  <main class="container">
+    <div class="p-5 mb-4 bg-light rounded-3">
+      <div class="container-fluid py-5">
+        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
+        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
+        <p>Welcome to TEST <%= title %> Page</p>
+      </div>
+    </div>
+  </main>
+  
   <!-- SCRIPT SECTION -->
   <script src="/jquery/dist/jquery.min.js"></script>
   <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
