--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,30 +23,50 @@
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-house"></i> Home</a>
+            <% if (title == "Home") { %>           
+                <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-house"></i> Home</a>
+            <% } else { %>
+                <a class="nav-link" aria-current="page" href="/home"><i class="fa-solid fa-house"></i> Home</a>           
+            <% } %>   
+          </li>  
+          
+          <li class="nav-item">
+            <% if (title == "About Me") { %>           
+              <a class="nav-link active" aria-current="page" href="/about"><i class="fa-solid fa-circle-info"></i> About</a>
+            <% } else { %>
+              <a class="nav-link" aria-current="page" href="/about"><i class="fa-solid fa-circle-info"></i> About</a>           
+            <% } %>            
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/about"><i class="fa-solid fa-circle-info"></i> About</a>
+            <% if (title == "Projects") { %>           
+              <a class="nav-link active" aria-current="page" href="/projects"><i class="fa-solid fa-paperclip"></i> Projects</a>
+            <% } else { %>
+              <a class="nav-link" aria-current="page" href="/projects"><i class="fa-solid fa-paperclip"></i> Projects</a>           
+            <% } %>               
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/projects"><i class="fa-solid fa-paperclip"></i> Projects</a>
+            <% if (title == "Services") { %>           
+              <a class="nav-link active" aria-current="page" href="/services"><i class="fa-solid fa-handshake"></i> Services</a>
+            <% } else { %>
+              <a class="nav-link" aria-current="page" href="/services"><i class="fa-solid fa-handshake"></i> Services</a>       
+            <% } %>         
           </li>
           
           <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/services"><i class="fa-solid fa-handshake"></i> Services</a>
-          </li>
-          
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="/contact"><i class="fa-solid fa-envelope"></i> Contact Us</a>
+            <% if (title == "Contact") { %>           
+              <a class="nav-link active" aria-current="page" href="/contact"><i class="fa-solid fa-envelope"></i> Contact Us</a>
+            <% } else { %>
+              <a class="nav-link" aria-current="page" href="/contact"><i class="fa-solid fa-envelope"></i> Contact Us</a>       
+            <% } %>                     
           </li>
           
         </form>
       </div>
     </div>
   </nav>
-  
+
   <!-- MAIN CONTENT SECTION -->
   <main class="container">
     <div class="p-5 mb-4 bg-light rounded-3">
