--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,71 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= title %></title>
-  <!-- CSS SECTION -->
-  <link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/@fortawesome/fontawesome-free/css/all.min.css">
-  <link rel='stylesheet' href='/Content/app.css' />
-</head>
-<body>
-  <!-- MAIN NAVIGATION -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#">COMP229</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          
-          <li class="nav-item">
-            <% if (title == "Home") { %>           
-                <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-house"></i> Home</a>
-            <% } else { %>
-                <a class="nav-link" aria-current="page" href="/home"><i class="fa-solid fa-house"></i> Home</a>           
-            <% } %>   
-          </li>  
-          
-          <li class="nav-item">
-            <% if (title == "About Me") { %>           
-              <a class="nav-link active" aria-current="page" href="/about"><i class="fa-solid fa-circle-info"></i> About</a>
-            <% } else { %>
-              <a class="nav-link" aria-current="page" href="/about"><i class="fa-solid fa-circle-info"></i> About</a>           
-            <% } %>            
-          </li>
-          
-          <li class="nav-item">
-            <% if (title == "Projects") { %>           
-              <a class="nav-link active" aria-current="page" href="/projects"><i class="fa-solid fa-paperclip"></i> Projects</a>
-            <% } else { %>
-              <a class="nav-link" aria-current="page" href="/projects"><i class="fa-solid fa-paperclip"></i> Projects</a>           
-            <% } %>               
-          </li>
-          
-          <li class="nav-item">
-            <% if (title == "Services") { %>           
-              <a class="nav-link active" aria-current="page" href="/services"><i class="fa-solid fa-handshake"></i> Services</a>
-            <% } else { %>
-              <a class="nav-link" aria-current="page" href="/services"><i class="fa-solid fa-handshake"></i> Services</a>       
-            <% } %>         
-          </li>
-          
-          <li class="nav-item">
-            <% if (title == "Contact") { %>           
-              <a class="nav-link active" aria-current="page" href="/contact"><i class="fa-solid fa-envelope"></i> Contact Us</a>
-            <% } else { %>
-              <a class="nav-link" aria-current="page" href="/contact"><i class="fa-solid fa-envelope"></i> Contact Us</a>       
-            <% } %>                     
-          </li>
-          
-        </form>
-      </div>
-    </div>
-  </nav>
+<%- include partials/header.ejs %>
+
+<%- include partials/main_nav.ejs %>
 
   <!-- MAIN CONTENT SECTION -->
   <main class="container">
@@ -77,11 +12,5 @@
       </div>
     </div>
   </main>
-  
-  <!-- SCRIPT SECTION -->
-  <script src="/jquery/dist/jquery.min.js"></script>
-  <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
-  <script src="/Scripts/app.js"></script>
-</body>
-</html>
 
+<%- include partials/footer.ejs %>
