--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,11 +1,15 @@
 <!-- MAIN NAVIGATION -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="#">COMP229</a>
+      <a class="navbar-brand" href="/home">
+        <img src="./Assets/images/logo.png"  id="logo" class="rounded" alt="Logo">   
+      </a>
+      <a class="navbar-brand" href="/home">James Yan</a>      
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       
+      <!-- Collapse Bar -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           
