Completed About Me Page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,16 +1,36 @@
+<!-- Importing Header -->
 <%- include partials/header.ejs %>
 
+<!-- Importing NavBar -->
 <%- include partials/main_nav.ejs %>
 
 <!-- MAIN ABOUT SECTION -->
 <main class="container">
     <div class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Custom jumbotron</h1>
-        <p class="col-md-8 fs-4">Using a series of utilities, you can create this jumbotron, just like the one in previous versions of Bootstrap. Check out the examples below for how you can remix and restyle it to your liking.</p>
-        <p>Welcome to TEST <%= title %> Page</p>
-      </div>
+        
+        <!-- About Me Text Section-->
+        <h1 class="display-5 fw-bold"><%= firstName %> <%= lastName %></h1>
+        <h4 class="fs-5 pb-5 fw-semibold">Junior Software Developer, Software Engineering Student, and Tech Enthusiast in the Greater Toronto Area</h4>
+        
+        <!-- Columns -->
+        <div class="container text-start">
+          <div class="row align-items-start">
+            <!-- Column 1 -->
+            <div class="col fs-4 ">
+              <p>Hello World!</p>
+              <p>My name is <strong><%= firstName %></strong> and I am currently a student enrolled at <strong>Centennial College</strong> in the <strong>Software Engineering Technology - Artificial Intelligence</strong> program for an Advanced Diploma. Growing up from a very convservative background, I was fascinated as a child by technology and I still am today. I seek to the push the limits of todays latest cutting edge technology to see where it may take us later on in the future.</p>
+              <p>I am always seeking to make connections with new people and am seeking for work opportunities for co-op as a <strong>Junior Software Developer Intern.</strong> For any questions or concerns, please feel free to reach out!</p>
+            </div>
+            <!-- Column 2; Picture of Me -->
+            <picture class="col">
+              <source srcset="./Assets/images/me.jpg" type="image/svg+xml">
+              <img src="./Assets/images/me.jpg" class="img-fluid img-thumbnail bg-dark" alt="James Yan - 2022">
+            </picture>
+          </div>
+        </div>
     </div>
   </main>
 
+<!-- Importing Scripts -->
 <%- include partials/footer.ejs %>
