--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,7 @@
+<!-- Importing Header -->
 <%- include partials/header.ejs %>
 
+<!-- Importing NavBar -->
 <%- include partials/main_nav.ejs %>
 
   <!-- MAIN CONTENT SECTION -->
@@ -15,20 +17,19 @@
           <img src="./Assets/images/indexlearning.jpg" class="img-fluid img-thumbnail bg-dark" alt="Learning Environment">
         </picture>
 
-        
+        <!-- Mission Statement -->
         <h3 class="display-5 lh-lg pt-5 fw-bold">Mission Statement</h1>
         <figure>
           <blockquote class="blockquote fst-italic container-md fs-4">
-            <p>To contribute myself to the greater development of future technology and see the day where I will be able to safely sleep while driving.</p>
+            <p class="col-md-8 fs-4">To contribute myself to the greater development of future technology and see the day where I will be able to safely sleep while driving.</p>
           </blockquote>
-          <figcaption class="blockquote-footer container-md fs-5">
+          <figcaption class="blockquote-footer container-md fs-5 pt-3">
             <cite title="Source Title">James Yan</cite>
           </figcaption>
         </figure>
-        <p class="col-md-8 fs-4"></p>
-        
       </div>
     </div>
   </main>
 
+<!-- Importing Scripts -->
 <%- include partials/footer.ejs %>
