Added Resume to About Me Page

--- a/views/about.ejs
+++ b/views/about.ejs
@@ -21,6 +21,8 @@
               <p>Hello World!</p>
               <p>My name is <strong><%= firstName %></strong> and I am currently a student enrolled at <strong>Centennial College</strong> in the <strong>Software Engineering Technology - Artificial Intelligence</strong> program for an Advanced Diploma. Growing up from a very convservative background, I was fascinated as a child by technology and I still am today. I seek to the push the limits of todays latest cutting edge technology to see where it may take us later on in the future.</p>
               <p>I am always seeking to make connections with new people and am seeking for work opportunities for co-op as a <strong>Junior Software Developer Intern.</strong> For any questions or concerns, please feel free to reach out!</p>
+              <p>Click Below For My Resume</p>
+              <a href="https://drive.google.com/file/d/16-4caa6aaKyP7zZ0svhf9VVbcZLg5hXL/view?usp=sharing">My Resume</a>
             </div>
             <!-- Column 2; Picture of Me -->
             <picture class="col">
