Completed Contact Page and Added Necessary Documentation

--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,8 +1,19 @@
-/* custom css goes here */
-body{
+/* HTML Body Element */
+body {
     background-color: blanchedalmond;
 }
 
+/* Logo */
 #logo {
     width: 50px;
+}
+
+/* HTML Link Hover */
+a:hover {
+    text-decoration: none;
+}
+
+/* HTML Link Active */
+a:active {
+    text-decoration: none;
 }
