--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,4 +1,8 @@
-<%- include partials/header.ejs %> 
+<!-- File Name: error.ejs   Student Name: James Yan   Student ID: 301229536   Date: 09/30/2022 -->
+<!-- Importing Header -->
+<%- include partials/header.ejs %>
+
+<!-- Importing NavBar -->
 <%- include partials/main_nav.ejs %>
 
 <div class="container">
@@ -7,5 +11,5 @@
     <pre><%= error.stack %></pre>
 </div>
 
-
-<%- include partials/header.ejs %> 
+<!-- Importing Scripts -->
+<%- include partials/footer.ejs %>
