--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,4 +1,4 @@
-  
+<!-- File Name: footer.ejs   Student Name: James Yan   Student ID: 301229536   Date: 09/30/2022 -->
   <!-- SCRIPT SECTION -->
   <script src="/jquery/dist/jquery.min.js"></script>
   <script src="/bootstrap/dist/js/bootstrap.min.js"></script>
