--- a/views/projects.ejs
+++ b/views/projects.ejs
@@ -1,3 +1,4 @@
+<!-- File Name: projects.ejs   Student Name: James Yan   Student ID: 301229536   Date: 09/30/2022 -->
 <!-- Importing Header -->
 <%- include partials/header.ejs %>
 
