--- a/views/services.ejs
+++ b/views/services.ejs
@@ -1,3 +1,4 @@
+<!-- File Name: services.ejs   Student Name: James Yan   Student ID: 301229536   Date: 09/30/2022 -->
 <!-- Importing Header -->
 <%- include partials/header.ejs %>
 
@@ -9,7 +10,7 @@
     <div class="p-5 mb-4 bg-light rounded-3">
         <div class="container-fluid py-5">
             <h1 class="display-1 fw-bolder"><%= title %></h1>
-            <p class="col-md-8 fs-4 pb-4">The following below are a list of skills that I have accumulated along my educational study of programming that I am able implement on the day job:</p>
+            <p class="col-md-8 fs-4 pb-4">The following below are a list of skills that I have accumulated along my educational study of programming that I am able utilize on the day job:</p>
             <div class="col-md-11 ps-5">
                 
                 <!-- "Front End Development" Section -->
@@ -51,6 +52,7 @@
                                 <li>SQL Data Handling and Manipulation</li>
                                 <li>Bash System Navigation</li>
                                 <li>Front-End and Back-End Integration</li>
+                                <li>GIT Deployment</li>
                             </ul>
                         </div>
                         <!-- "Back End Development" Image -->
