--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<!-- File Name: header.ejs   Student Name: James Yan   Student ID: 301229536   Date: 09/30/2022 -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
