--- a/views/partials/main_nav.ejs
+++ b/views/partials/main_nav.ejs
@@ -1,3 +1,4 @@
+<!-- File Name: main_nav.ejs   Student Name: James Yan   Student ID: 301229536   Date: 09/30/2022 -->
 <!-- MAIN NAVIGATION -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
@@ -9,10 +10,11 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       
-      <!-- Collapse Bar -->
+      <!-- Content on Collapse Bar -->
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           
+          <!-- Paths on NavBar-->
           <li class="nav-item">
             <% if (title == "Home") { %>           
                 <a class="nav-link active" aria-current="page" href="/home"><i class="fa-solid fa-house"></i> Home</a>
@@ -51,8 +53,7 @@
             <% } else { %>
               <a class="nav-link" aria-current="page" href="/contact"><i class="fa-solid fa-envelope"></i> Contact Us</a>       
             <% } %>                     
-          </li>
-          
+          </li>          
         </form>
       </div>
     </div>
