--- a/public/Content/app.css
+++ b/public/Content/app.css
@@ -1,3 +1,4 @@
+/* File Name: app.css   Student Name: James Yan   Student ID: 301229536   Date: 09/30/2022 */
 /* HTML Body Element */
 body {
     background-color: blanchedalmond;
